Now with unicorns!

--- a/Part 2/index.html
+++ b/Part 2/index.html
@@ -7,5 +7,15 @@
 </head>
 <body>
     <button>Sign Up</button>
+
+    <section>  
+        <div><img src="https://images-na.ssl-images-amazon.com/images/I/61usDmQmaZL._AC_SX466_.jpg"></div>
+        <div class="caption">
+            <h2>Title</h2>
+            <hr>
+            <p>Unicorns are basically the best. They are so delicious. I want a unicorn for every meal!</p>
+
+        </div>
+    </section>
 </body>
 </html>
